--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember test"
+    "test": "ember test",
+    "deploy": "ember build -e production && cp dist/index.html dist/200.html && surge dist http://tnnettech.com"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
@@ -27,6 +28,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-sass": "^6.2.0",
     "ember-cli-shims": "^1.2.0-beta.2",
@@ -35,6 +37,7 @@
     "ember-data": "~2.13.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.6.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.0-beta.1",
     "ember-welcome-page": "^3.0.0",
